fix maven version